Bug 1202895 - Fix shift-reload check for setting up service worker. r=bkelly